add online solution for API

--- a/front/html/product.html
+++ b/front/html/product.html
@@ -164,6 +164,7 @@
                 </div>
             </div>
         </footer>
+        <script src="../js/config.js"></script>
         <script src="../js/product.js"></script>
     </body>
 </html>
