--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -204,6 +204,7 @@
                 </div>
             </div>
         </footer>
+        <script src="../js/config.js"></script>
         <script src="../js/cart.js"></script>
     </body>
 </html>
