--- a/front/html/index.html
+++ b/front/html/index.html
@@ -125,6 +125,7 @@
                 </div>
             </div>
         </footer>
+        <script src="../js/config.js"></script>
         <script src="../js/index.js"></script>
     </body>
 </html>
